# ProjectTemplate

./: .clang-tidy  CMakeLists.txt  CMakeSettings.json  Makefile
include/: CMakeLists.txt
lib/: CMakeLists.txt
src/: CMakeLists.txt
