#To add libraries to be seen by the linker, you must have the next command for each library in this folder
#add_subdirectory("libFolderName")
#
# find_package(name) // Used to add packages from the system
#
# target_link_libraries(${PROJECT_NAME} mylib) // add a list of each library at the end of the function.
#

